<resources>
    <string name="app_name">Register</string>
    <string name="action_settings">Settings</string>
    <string name="computer_center">COMPUTER CENTER</string>
    <string name="library">LIBRARY</string>
    <string name="hostel">HOSTEL</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string-array name="hostels_array">
        <item>SRHC BH1</item>
        <item>SRHC BH2</item>
        <item>NIT DELHI</item>
        <item>ROHINI</item>
        <item>KUNDLI</item>
        <item>DAY SCHOLAR</item>
    </string-array>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="title_activity_cc">CCActivity</string>
    <string name="title_activity_hostel">HostelActivity</string>
    <string name="update">UPDATE</string>
</resources>
